--- a/index.html
+++ b/index.html
@@ -8,56 +8,62 @@
     <link rel="icon" href="img/mdc-logo-.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link href="styles/home.css" </head>
+    <link href="styles/home.css" rel="stylesheet">
+</head>
 
 <body>
-    <nav class="bg-dark d-flex container-fluid">
-        <img src="img/mdc-logo-inverse.png" alt="">
-        <div class="d-flex justify-content-center  col-8">
-            <button>About MDC</button>
-            <button>Academics</button>
-            <button>Admissions</button>
-            <button>Paying for College</button>
-            <button>Life at MDC</button>
-            <button>Portals</button>
-        </div>
-        <div class="d-flex justify-content-center col-4">
-            <i class="fa-solid fa-cart-shopping align-middle" style="color: #ffffff;"></i>
-            <span class="badge bg-secondary">0</span></h1>
 
-            <button>Login</button>
+    <!-- navbar 1 -->
+    <nav class="bg-dark">
+        <div class="d-flex justify-content-center container">
+            <div class="d-flex col-9">
+                <img class="logo" src="img/mdc-logo-inverse.png" alt="Miami Dade College homepage">
+                <div class="d-flex justify-content-center ms-2">
+                    <button class="first-navbar-button transparent">About MDC</button>
+                    <button class="first-navbar-button transparent">Academics</button>
+                    <button class="first-navbar-button transparent">Admissions</button>
+                    <button class="first-navbar-button transparent">Paying for College</button>
+                    <button class="first-navbar-button transparent">Life at MDC</button>
+                    <button class="first-navbar-button transparent">Portals</button>
+                </div>
+            </div>
+            <div class="d-flex justify-content-center col-3">
+                <div class="shoppin-cart">
+                    <i class="fa-solid fa-cart-shopping fa-sm" style="color: #ffffff;"></i>
+                    <span class="badge">0</span>
+                </div>
+                <button class="ms-2 transparent">Login</button>
+            </div>
         </div>
     </nav>
 
+    <section class="bg-light d-flex  ">
+        <div class="col d-flex justify-content-center">
+            <a href="">
+                <h3>School of Continuing Education
+                    & Professional Development</h3>
+            </a>
+        </div>
+        <form class="col d-flex justify-content-center  g-3">
+            <div class="col-auto">
+                <label for="inputPassword2" class="visually-hidden">Password</label>
+                <input type="password" class="form-control" id="inputPassword2" placeholder="Password">
+            </div>
+            <div class="col-auto">
+                <button type="submit" class="btn btn-primary mb-3"><i class="fa-solid fa-magnifying-glass fa-sm"
+                        style="color: #ffffff;"></i></button>
+            </div>
+        </form>
+    </section>
+    <!-- navbar 1 -->
+    <nav class="d-flex justify-content-center bluecolor">
+        <button class="second-navbar-button">Home</button>
+        <button class="second-navbar-button">Courses</button>
+        <button class="second-navbar-button">Programs</button>
+        <button class="second-navbar-button">Corporate Training</button>
+        <button class="second-navbar-button">About Our School</button>
+    </nav>
     <main>
-        <section class="bg-light d-flex  ">
-            <div class="col d-flex justify-content-center">
-                <a href="">
-                    <h3>School of Continuing Education
-                        & Professional Development</h3>
-                </a>
-            </div>
-
-            <form class="col d-flex justify-content-center  g-3">
-                <div class="col-auto">
-                    <label for="inputPassword2" class="visually-hidden">Password</label>
-                    <input type="password" class="form-control" id="inputPassword2" placeholder="Password">
-                </div>
-                <div class="col-auto">
-                    <button type="submit" class="btn btn-primary mb-3"><i class="fa-solid fa-magnifying-glass fa-sm"
-                            style="color: #ffffff;"></i></button>
-                </div>
-            </form>
-        </section>
-        <nav class="bg-dark d-flex justify-content-center container-fluid">
-            <div class="d-flex justify-content-center">
-                <button class="m-3">Home</button>
-                <button class="m-3">Courses</button>
-                <button class="m-3">Programs</button>
-                <button class="m-3">Corporate Training</button>
-                <button class="m-3">About Our School</button>
-            </div>
-        </nav>
         <section class="bg-light d-flex">
             <div class="col-6">
                 <h2>Low Voltage Technician Certificate</h2>
