navbar 1, falta cambiar tipografia y tamano

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
                     <button class="first-navbar-button transparent">Portals</button>
                 </div>
             </div>
-            <div class="d-flex justify-content-center col-3">
-                <div class="shoppin-cart">
+            <div class="d-flex justify-content-end col-3 ms-3">
+                <div class="shoppin-cart ">
                     <i class="fa-solid fa-cart-shopping fa-sm" style="color: #ffffff;"></i>
                     <span class="badge">0</span>
                 </div>
-                <button class="ms-2 transparent">Login</button>
+                <button class="ms-3 transparent login-button">Login</button>
             </div>
         </div>
     </nav>
