navbar 1, falta cambiar tipografia, seccion busqueda iniciada

--- a/index.html
+++ b/index.html
@@ -37,23 +37,27 @@
         </div>
     </nav>
 
-    <section class="bg-light d-flex  ">
-        <div class="col d-flex justify-content-center">
-            <a href="">
-                <h3>School of Continuing Education
-                    & Professional Development</h3>
+    <section class="search-section">
+        <div class="container d-flex">
+            <a href="" class="col-7">
+                <div>
+
+                    <h3 class="w-75 mt-2">School of Continuing Education
+                        & Professional Development</h3>
+
+                </div>
             </a>
+            <form class="col-5 d-flex justify-content-center  g-3 search-bar">
+                <div class="col-auto">
+                    <label for="inputPassword2" class="visually-hidden">Password</label>
+                    <input type="password" class="form-control" id="inputPassword2" placeholder="Search our programs">
+                </div>
+                <div class="col-auto">
+                    <button type="submit" class="btn btn-primary mb-3"><i class="fa-solid fa-magnifying-glass fa-sm"
+                            style="color: #ffffff;"></i></button>
+                </div>
+            </form>
         </div>
-        <form class="col d-flex justify-content-center  g-3">
-            <div class="col-auto">
-                <label for="inputPassword2" class="visually-hidden">Password</label>
-                <input type="password" class="form-control" id="inputPassword2" placeholder="Password">
-            </div>
-            <div class="col-auto">
-                <button type="submit" class="btn btn-primary mb-3"><i class="fa-solid fa-magnifying-glass fa-sm"
-                        style="color: #ffffff;"></i></button>
-            </div>
-        </form>
     </section>
     <!-- navbar 1 -->
     <nav class="d-flex justify-content-center bluecolor">
