--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <!-- navbar 1 -->
-    <nav class="bg-dark">
+    <nav class="darkcolor">
         <div class="d-flex justify-content-center container">
             <div class="d-flex col-9">
                 <img class="logo" src="img/mdc-logo-inverse.png" alt="Miami Dade College homepage">
@@ -38,102 +38,107 @@
     </nav>
 
     <section class="search-section">
-        <div class="container d-flex">
+        <div class="container d-flex ">
             <a href="" class="col-7">
                 <div>
-
-                    <h3 class="w-75 mt-2">School of Continuing Education
+                    <h3 class="w-75 search-section-title">School of Continuing Education
                         & Professional Development</h3>
-
                 </div>
             </a>
-            <form class="col-5 d-flex justify-content-center  g-3 search-bar">
-                <div class="col-auto">
-                    <label for="inputPassword2" class="visually-hidden">Password</label>
-                    <input type="password" class="form-control" id="inputPassword2" placeholder="Search our programs">
-                </div>
-                <div class="col-auto">
-                    <button type="submit" class="btn btn-primary mb-3"><i class="fa-solid fa-magnifying-glass fa-sm"
-                            style="color: #ffffff;"></i></button>
-                </div>
-            </form>
-        </div>
+            <div class="col-5 d-flex align-items-middle">
+                <form class="d-flex justify-content-center search-bar">
+                    <div class="col-auto me-2">
+                        <label for="inputPassword2" class="visually-hidden">Password</label>
+                        <input type="password" class="form-control" id="inputPassword2" placeholder="Search our programs">
+                    </div>
+                    <div class="col-auto">
+                        <button type="submit" class="btn bluecolor mb-3"><i class="fa-solid fa-magnifying-glass fa-sm"
+                                style="color: #ffffff;"></i></button>
+                    </div>
+                </form>
+            </div>
+            </div>
+            
     </section>
     <!-- navbar 1 -->
     <nav class="d-flex justify-content-center bluecolor">
-        <button class="second-navbar-button">Home</button>
-        <button class="second-navbar-button">Courses</button>
-        <button class="second-navbar-button">Programs</button>
-        <button class="second-navbar-button">Corporate Training</button>
-        <button class="second-navbar-button">About Our School</button>
+        <button class="second-navbar-button transparent">Home</button>
+        <button class="second-navbar-button transparent">Courses</button>
+        <button class="second-navbar-button transparent">Programs</button>
+        <button class="second-navbar-button transparent">Corporate Training</button>
+        <button class="second-navbar-button transparent">About Our School</button>
     </nav>
     <main>
-        <section class="bg-light d-flex">
-            <div class="col-6">
-                <h2>Low Voltage Technician Certificate</h2>
-                <h5>Jump-start your career in the electronics industry!</h5>
-                <p>The Low Voltage Technician Certificate will equip you with the essential skills and hands-on training
+        <section class="bg-light d-flex apply-section">
+            <div class="col-6 apply-section-content">
+                <h1 class="fw-bold apply-title">Low Voltage Technician Certificate</h1>
+                <h4 class="fw-bold mt-3 pt-2 apply-subtitle">Jump-start your career in the electronics industry!</h4>
+                <p class="mt-3 pt-2 apply-paragraph">The Low Voltage Technician Certificate will equip you with the essential skills and hands-on training
                     you
                     need to excel in entry-level positions and launch a successful career in Electronics Technology
                     Integration.
                 </p>
-                <button>Apply for Low Voltage</button>
+                <button class="mt-2 apply-button">Apply for Low Voltage</button>
             </div>
         </section>
-        <section class="bg-light d-flex">
-            <div class="col-6">
-                <h3>Program Overview</h3>
+
+        <section class="d-flex container">
+            <div class="col-6 overview-section">
+                <h2 class="">Program Overview</h2>
                 <p>The Career Technical Certificate (CTC) in Low Voltage Technician is designed to educate and prepare
                     graduates with the transferable skills required for entry-level employment in the Electronics
                     Technology Integration industry.
-
+                </p>
+                <p>
                     Low Voltage Technicians are responsible for installing and configuring power devices, Closed Circuit
                     Television (CCTV) devices, and phone/networking systems. They install and calibrate audio and video
                     sub-systems, design and construct racks and cabinets, and build network infrastructure and wireless
                     networks.
-
+                </p>
+                <p>
                     From wiring and installation to troubleshooting and repair, our program covers everything you need
                     to know to excel as an entry-level Low Voltage Technician. With hands-on training and expert
                     instruction, you'll be ready to hit the ground running and succeed in the fast-paced world of
                     Electronics Technology Integration.
-
+                </p>
+                <p>
                     This program contains 5 consecutive courses. Each course has a duration of 150 hours (5 credits).
                 </p>
             </div>
-            <div class="col-6">
-                <h3>COURSE INFORMATION</h3>
-                <h5>Low Voltage Technician Certificate</h5>
+            <div class="col-6 information-section">
+                <h3 class="border-bottom">COURSE INFORMATION</h3>
+                <h5 class="border-bottom">Low Voltage Technician Certificate</h5>
                 <div class="row">
-                    <div class="col">
+                    <div class="col information-section-point">
                         <div>
                             <strong>START DATE:</strong><br>
-                            May 2023
+                            <p class="information-section-point-psize">May 2023</p>
                         </div>
                         <div>
                             <strong>DURATION:</strong><br>
-                            750 Hours
+                            <p class="information-section-point-psize">750 Hours</p>
                         </div>
                         <div>
                             <strong>TUITION FEE:</strong><br>
-                            $2,955.50
+                            <p class="information-section-point-psize">$2,955.50</p>
                         </div>
                         <div>
                             <strong>LOCATION:</strong><br>
-                            Homestead Campus
+                            <p class="information-section-point-psize">Homestead Campus</p>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col information-section-point">
                         <div>
                             <strong>MEETING DAYS:</strong><br>
-                            May 2023
+                            <p class="information-section-point-psize">Mondays to Fridays</p>
                         </div>
                         <div>
                             <strong>COHORTS SCHEDULE:</strong><br>
-                            May 2023
+                            <p class="information-section-point-psize">9:00 a.m. to 2:00 p.m.</p>
                         </div>
                         <div>
                             <strong>COURSE FORMAT:</strong><br>
-                            May 2023
+                            <p class="information-section-point-psize">Blended</p>
                         </div>
                     </div>
 
