first nav-bar lista; search section lista

--- a/index.html
+++ b/index.html
@@ -22,89 +22,93 @@
                     <div class="dropdown">
                         <button class="first-navbar-button separator-l separator transparent">About MDC</button>
                         <div class="dropdown-content">
-                            <a  href="//www.mdc.edu/about/">About Miami Dade College</a>
-                            <a  href="//www.mdc.edu/accreditation/">Accreditation</a>
-                            <a  href="//www.mdc.edu/future-students/">Future Students</a>
-                            <a  href="//www.mdc.edu/president/">Office of the President</a>
-                            <a  href="//www.mdc.edu/about/community.aspx">Community Engagement</a>
-                            <a  href="//www.mdc.edu/campus-finder/">Campuses and Centers</a>
-                            <a  href="//www.mdc.edu/jobs/">Jobs at MDC</a>
-                            <a  href="//www.mdc.edu/sustainability/">Sustainability</a>
+                            <a href="//www.mdc.edu/about/">About Miami Dade College</a>
+                            <a href="//www.mdc.edu/accreditation/">Accreditation</a>
+                            <a href="//www.mdc.edu/future-students/">Future Students</a>
+                            <a href="//www.mdc.edu/president/">Office of the President</a>
+                            <a href="//www.mdc.edu/about/community.aspx">Community Engagement</a>
+                            <a href="//www.mdc.edu/campus-finder/">Campuses and Centers</a>
+                            <a href="//www.mdc.edu/jobs/">Jobs at MDC</a>
+                            <a href="//www.mdc.edu/sustainability/">Sustainability</a>
                         </div>
                     </div>
                     <div class="dropdown">
                         <button class="first-navbar-button separator transparent">Academics</button>
                         <div class="dropdown-content">
-                            <a class="dropdown-item dropdownListItems navbarHeaders" href="//www.mdc.edu/academics/" title="MDC Academic Programs">Academic Programs</a>
-                            <a  href="//www.mdc.edu/academics/calendar/">Academic Calendar</a>
-                            <a  href="//www.mdc.edu/honorscollege/">The Honors College</a>
-                            <a  href="//www.mdc.edu/online/">MDC Online</a>
-                            <a  href="//www.mdc.edu/ce/">Continuing Education</a>
-                            <a  href="//www.mdc.edu/highschool/">High School Programs</a>
-                            <a  href="http://nwsa.mdc.edu/">New World School of the Arts</a>
-                            <a  href="//www.mdc.edu/learning-resources/">Libraries</a>
-                            <a  href="//www.mdc.edu/learning-resources/about/">Learning Resources</a>
+                            <a class="dropdown-item dropdownListItems navbarHeaders" href="//www.mdc.edu/academics/"
+                                title="MDC Academic Programs">Academic Programs</a>
+                            <a href="//www.mdc.edu/academics/calendar/">Academic Calendar</a>
+                            <a href="//www.mdc.edu/honorscollege/">The Honors College</a>
+                            <a href="//www.mdc.edu/online/">MDC Online</a>
+                            <a href="//www.mdc.edu/ce/">Continuing Education</a>
+                            <a href="//www.mdc.edu/highschool/">High School Programs</a>
+                            <a href="http://nwsa.mdc.edu/">New World School of the Arts</a>
+                            <a href="//www.mdc.edu/learning-resources/">Libraries</a>
+                            <a href="//www.mdc.edu/learning-resources/about/">Learning Resources</a>
                         </div>
                     </div>
 
                     <div class="dropdown">
                         <button class="first-navbar-button separator transparent">Admissions</button>
                         <div class="dropdown-content">
-                            <a  href="//www.mdc.edu/admissions/" title="Apply to MDC">Apply Now</a>
-                            <a  href="//www.mdc.edu/advisement/">Advisement</a>
-                            <a  href="//www.mdc.edu/registration/">Register for Classes</a>
-                            <a  href="//www.mdc.edu/transcripts/">Transcripts and Test Scores</a>
-                            <a  href="//www.mdc.edu/veterans/">Veteran and Military Services</a>
-                            <a  href="//www.mdc.edu/internationalstudents/">International Students</a>
-                            <a  href="//www.mdc.edu/testing/">Testing and Assessment</a>
+                            <a href="//www.mdc.edu/admissions/" title="Apply to MDC">Apply Now</a>
+                            <a href="//www.mdc.edu/advisement/">Advisement</a>
+                            <a href="//www.mdc.edu/registration/">Register for Classes</a>
+                            <a href="//www.mdc.edu/transcripts/">Transcripts and Test Scores</a>
+                            <a href="//www.mdc.edu/veterans/">Veteran and Military Services</a>
+                            <a href="//www.mdc.edu/internationalstudents/">International Students</a>
+                            <a href="//www.mdc.edu/testing/">Testing and Assessment</a>
                         </div>
                     </div>
-                    
+
                     <div class="dropdown">
                         <button class="first-navbar-button separator transparent">Paying for College</button>
                         <div class="dropdown-content">
-                            <a  href="//www.mdc.edu/tuition/">Tuition and Fees</a>
-                            <a  href="//www.mdc.edu/financialaid/">Financial Aid</a>
-                            <a  href="//www.mdc.edu/scholarships/" title="MDC Scholarships">Scholarships</a>
-                            <a  href="//www.mdc.edu/costs/">Payment Options</a>
-                            <a  href="//www.mdc.edu/workstudy/">Student Work Programs</a>
+                            <a href="//www.mdc.edu/tuition/">Tuition and Fees</a>
+                            <a href="//www.mdc.edu/financialaid/">Financial Aid</a>
+                            <a href="//www.mdc.edu/scholarships/" title="MDC Scholarships">Scholarships</a>
+                            <a href="//www.mdc.edu/costs/">Payment Options</a>
+                            <a href="//www.mdc.edu/workstudy/">Student Work Programs</a>
                         </div>
                     </div>
 
                     <div class="dropdown">
                         <button class="first-navbar-button separator transparent">Life at MDC</button>
                         <div class="dropdown-content">
-                            <a  href="//www.mdc.edu/arts-culture/">Arts &amp; Culture</a>
-                            <a  href="//www.mdc.edu/mdcworks/">Career Services</a>
-                            <a  href="//calendar.mdc.edu/">Events</a>
-                            <a  href="//news.mdc.edu/">News</a>
-                            <a  href="//www.mdc.edu/studentlife/">Student Life</a>
-                            <a  href="//www.mdc.edu/student-wellness/">Student Wellness</a>
-                            <a  href="//www.mdc.edu/athletics/">Athletics</a>
-                            <a  href="//www.mdc.edu/safety/">Public Safety</a>
-                            <a  href="//www.mdc.edu/collegeforum/">College Forum</a>
+                            <a href="//www.mdc.edu/arts-culture/">Arts &amp; Culture</a>
+                            <a href="//www.mdc.edu/mdcworks/">Career Services</a>
+                            <a href="//calendar.mdc.edu/">Events</a>
+                            <a href="//news.mdc.edu/">News</a>
+                            <a href="//www.mdc.edu/studentlife/">Student Life</a>
+                            <a href="//www.mdc.edu/student-wellness/">Student Wellness</a>
+                            <a href="//www.mdc.edu/athletics/">Athletics</a>
+                            <a href="//www.mdc.edu/safety/">Public Safety</a>
+                            <a href="//www.mdc.edu/collegeforum/">College Forum</a>
                         </div>
                     </div>
                     <div class="dropdown">
                         <button class="first-navbar-button separator transparent">Portals</button>
                         <div class="dropdown-content">
                             <span class="">Students</span>
-                            <a  href="https://my.mdc.edu/">Student Portal</a>
-                            <a  href="//www.mdc.edu/mdconnect/" title="MDConnect student link" target="_blank">MDConnect</a>
-                            <a  href="https://mycourses.mdc.edu/" title="Log in to Blackboard" target="_blank">Blackboard</a>
-                            <a  href="https://mdc.instructure.com/" target="_blank">Canvas</a>
-                            <a  href="https://sharknet.mdc.edu/" target="_blank">SharkNet</a>
-                            <a  href="http://email.mymdc.net/" target="_blank">Student Email</a>
-                            <a  href="https://mdc.navigate.eab.com/" target="_blank">Navigate
-                              Student</a>
+                            <a href="https://my.mdc.edu/">Student Portal</a>
+                            <a href="//www.mdc.edu/mdconnect/" title="MDConnect student link"
+                                target="_blank">MDConnect</a>
+                            <a href="https://mycourses.mdc.edu/" title="Log in to Blackboard"
+                                target="_blank">Blackboard</a>
+                            <a href="https://mdc.instructure.com/" target="_blank">Canvas</a>
+                            <a href="https://sharknet.mdc.edu/" target="_blank">SharkNet</a>
+                            <a href="http://email.mymdc.net/" target="_blank">Student Email</a>
+                            <a href="https://mdc.navigate.eab.com/" target="_blank">Navigate
+                                Student</a>
                             <span class="">Employees</span>
-                            <a  href="https://www.mdc.edu/employees/">Employee Portal</a>
-                            <a  href="http://mdconnect.mdc.edu/" title="MDConnect employee link" target="_blank">MDConnect</a>
-                            <a  href="//www.mdc.edu/owa/">Email</a>
-                            <a  href="//www.mdc.edu/retirees/">Retiree Portal</a>
-                            <a  href="https://mdc.campus.eab.com/" target="_blank">Navigate
-                              Staff</a>
-                            <a  href="http://myoffice.mdc.edu/" target="_blank">Office 365</a>
+                            <a href="https://www.mdc.edu/employees/">Employee Portal</a>
+                            <a href="http://mdconnect.mdc.edu/" title="MDConnect employee link"
+                                target="_blank">MDConnect</a>
+                            <a href="//www.mdc.edu/owa/">Email</a>
+                            <a href="//www.mdc.edu/retirees/">Retiree Portal</a>
+                            <a href="https://mdc.campus.eab.com/" target="_blank">Navigate
+                                Staff</a>
+                            <a href="http://myoffice.mdc.edu/" target="_blank">Office 365</a>
                         </div>
                     </div>
                 </div>
@@ -121,24 +125,26 @@
 
     <section class="search-section">
         <div class="container d-flex ">
-            <a href="" class="col-7">
-                <div>
-                    <h3 class="w-75 search-section-title">School of Continuing Education
-                        & Professional Development</h3>
+            <div class="row">
+                <div class="col-6 search-section-title">
+                    <a href="" class="a-search-section font-28-700">
+                        School of Continuing Education & Professional Development
+                    </a>
                 </div>
-            </a>
-            <div class="col-5 d-flex align-items-middle">
-                <form class="d-flex justify-content-center search-bar">
-                    <div class="col-auto me-2">
-                        <label for="inputPassword2" class="visually-hidden">Password</label>
-                        <input type="password" class="form-control" id="inputPassword2"
-                            placeholder="Search our programs">
-                    </div>
-                    <div class="col-auto">
-                        <button type="submit" class="btn bluecolor mb-3"><i class="fa-solid fa-magnifying-glass fa-sm"
-                                style="color: #ffffff;"></i></button>
-                    </div>
-                </form>
+
+                <div class="col-6 d-flex align-items-middle">
+                    <form class="d-flex justify-content-center search-bar">
+                        <div class="col-auto me-2">
+                            <label for="inputPassword2" class="visually-hidden">Password</label>
+                            <input type="password" class="form-control" id="inputPassword2"
+                                placeholder="Search our programs">
+                        </div>
+                        <div class="col-auto">
+                            <button type="submit" class="btn bluecolor mb-3"><i
+                                    class="fa-solid fa-magnifying-glass fa-sm" style="color: #ffffff;"></i></button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
 
@@ -154,9 +160,11 @@
     <main>
         <section class="bg-light d-flex apply-section">
             <div class="col-6 apply-section-content">
-                <h1 class="fw-bold apply-title">Low Voltage Technician Certificate</h1>
-                <h4 class="fw-bold mt-3 pt-2 apply-subtitle">Jump-start your career in the electronics industry!</h4>
-                <p class="mt-3 pt-2 apply-paragraph">The Low Voltage Technician Certificate will equip you with the
+                <h1 class="fw-bold apply-title font-40-700">Low Voltage Technician Certificate</h1>
+                <h4 class="fw-bold mt-3 pt-2 apply-subtitle font-22-700">Jump-start your career in the electronics
+                    industry!</h4>
+                <p class="mt-3 pt-2 apply-paragraph font-14-400">The Low Voltage Technician Certificate will equip you
+                    with the
                     essential skills and hands-on training
                     you
                     need to excel in entry-level positions and launch a successful career in Electronics Technology
