first nav-bar lista; search section lista

--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
     </section>
     <!-- navbar 1 -->
     <nav class="d-flex justify-content-center bluecolor">
-        <button class="second-navbar-button transparent">Home</button>
-        <button class="second-navbar-button transparent">Courses</button>
-        <button class="second-navbar-button transparent">Programs</button>
-        <button class="second-navbar-button transparent">Corporate Training</button>
-        <button class="second-navbar-button transparent">About Our School</button>
+        <button class="second-navbar-button font-15-400 transparent">Home</button>
+        <button class="second-navbar-button font-15-400 transparent">Courses</button>
+        <button class="second-navbar-button font-15-400 transparent">Programs</button>
+        <button class="second-navbar-button font-15-400 transparent">Corporate Training</button>
+        <button class="second-navbar-button font-15-400 transparent">About Our School</button>
     </nav>
     <main>
         <section class="bg-light d-flex apply-section">
@@ -174,66 +174,74 @@
             </div>
         </section>
 
-        <section class="d-flex container pb-5">
-            <div class="col-6 overview-section">
-                <h2 class="">Program Overview</h2>
-                <p>The Career Technical Certificate (CTC) in Low Voltage Technician is designed to educate and prepare
-                    graduates with the transferable skills required for entry-level employment in the Electronics
-                    Technology Integration industry.
-                </p>
-                <p>
-                    Low Voltage Technicians are responsible for installing and configuring power devices, Closed Circuit
-                    Television (CCTV) devices, and phone/networking systems. They install and calibrate audio and video
-                    sub-systems, design and construct racks and cabinets, and build network infrastructure and wireless
-                    networks.
-                </p>
-                <p>
-                    From wiring and installation to troubleshooting and repair, our program covers everything you need
-                    to know to excel as an entry-level Low Voltage Technician. With hands-on training and expert
-                    instruction, you'll be ready to hit the ground running and succeed in the fast-paced world of
-                    Electronics Technology Integration.
-                </p>
-                <p>
-                    This program contains 5 consecutive courses. Each course has a duration of 150 hours (5 credits).
-                </p>
-            </div>
-            <div class="col-6 information-section">
-                <h3 class="border-bottom">COURSE INFORMATION</h3>
-                <h5 class="border-bottom">Low Voltage Technician Certificate</h5>
-                <div class="row">
-                    <div class="col information-section-point">
-                        <div>
-                            <strong>START DATE:</strong><br>
-                            <p class="information-section-point-psize">May 2023</p>
+        <section class=" pb-5 ">
+            <div class="d-flex container justify-content-center">
+                <div class="col-6 overview-section">
+                    <h2 class="font-35-700">Program Overview</h2>
+                    <p class="font-14-400">The Career Technical Certificate (CTC) in Low Voltage Technician is designed
+                        to educate and prepare
+                        graduates with the transferable skills required for entry-level employment in the Electronics
+                        Technology Integration industry.
+                    </p>
+                    <p class="font-14-400">
+                        Low Voltage Technicians are responsible for installing and configuring power devices, Closed
+                        Circuit
+                        Television (CCTV) devices, and phone/networking systems. They install and calibrate audio and
+                        video
+                        sub-systems, design and construct racks and cabinets, and build network infrastructure and
+                        wireless
+                        networks.
+                    </p>
+                    <p class="font-14-400">
+                        From wiring and installation to troubleshooting and repair, our program covers everything you
+                        need
+                        to know to excel as an entry-level Low Voltage Technician. With hands-on training and expert
+                        instruction, you'll be ready to hit the ground running and succeed in the fast-paced world of
+                        Electronics Technology Integration.
+                    </p>
+                    <p class="font-14-400">
+                        This program contains 5 consecutive courses. Each course has a duration of 150 hours (5
+                        credits).
+                    </p>
+                </div>
+                <div class="col-6 information-section">
+                    <h3 class="border-bottom">COURSE INFORMATION</h3>
+                    <h5 class="border-bottom">Low Voltage Technician Certificate</h5>
+                    <div class="row">
+                        <div class="col information-section-point">
+                            <div>
+                                <strong>START DATE:</strong><br>
+                                <p class="information-section-point-psize">May 2023</p>
+                            </div>
+                            <div>
+                                <strong>DURATION:</strong><br>
+                                <p class="information-section-point-psize">750 Hours</p>
+                            </div>
+                            <div>
+                                <strong>TUITION FEE:</strong><br>
+                                <p class="information-section-point-psize">$2,955.50</p>
+                            </div>
+                            <div>
+                                <strong>LOCATION:</strong><br>
+                                <p class="information-section-point-psize">Homestead Campus</p>
+                            </div>
                         </div>
-                        <div>
-                            <strong>DURATION:</strong><br>
-                            <p class="information-section-point-psize">750 Hours</p>
+                        <div class="col information-section-point">
+                            <div>
+                                <strong>MEETING DAYS:</strong><br>
+                                <p class="information-section-point-psize">Mondays to Fridays</p>
+                            </div>
+                            <div>
+                                <strong>COHORTS SCHEDULE:</strong><br>
+                                <p class="information-section-point-psize">9:00 a.m. to 2:00 p.m.</p>
+                            </div>
+                            <div>
+                                <strong>COURSE FORMAT:</strong><br>
+                                <p class="information-section-point-psize">Blended</p>
+                            </div>
                         </div>
-                        <div>
-                            <strong>TUITION FEE:</strong><br>
-                            <p class="information-section-point-psize">$2,955.50</p>
-                        </div>
-                        <div>
-                            <strong>LOCATION:</strong><br>
-                            <p class="information-section-point-psize">Homestead Campus</p>
-                        </div>
-                    </div>
-                    <div class="col information-section-point">
-                        <div>
-                            <strong>MEETING DAYS:</strong><br>
-                            <p class="information-section-point-psize">Mondays to Fridays</p>
-                        </div>
-                        <div>
-                            <strong>COHORTS SCHEDULE:</strong><br>
-                            <p class="information-section-point-psize">9:00 a.m. to 2:00 p.m.</p>
-                        </div>
-                        <div>
-                            <strong>COURSE FORMAT:</strong><br>
-                            <p class="information-section-point-psize">Blended</p>
-                        </div>
-                    </div>
 
+                    </div>
                 </div>
             </div>
         </section>
