falta el footer

--- a/index.html
+++ b/index.html
@@ -245,52 +245,55 @@
                 </div>
             </div>
         </section>
-        <section class="bg-light d-flex mb-3">
-            <div class="col-6 overview-section container">
-                <h3>Contact Us</h3>
-                <p>For more information about the MDC Low Voltage Program, please contact the School of Continuing
-                    Education and Professional Development at Homestead Campus.
-                </p>
-                <p>
-                    <a class="a-none" href="/">
-                        <i class="fa-solid fa-phone me-1" style="color: #005dab;"></i>
-                        305-237-5159 <br>
-                    </a>
-                    <a class="a-none" href="/">
-                        <i class="fa-solid fa-location-dot me-1" style="color: #005dab;"></i>
-                        500 College Terrace, Room B112. Homestead, FL 33030 <br>
-                    </a>
-                    <a href="/">Get directions</a>
-                </p>
-            </div>
-            <div class="col-6 contact-form ">
-                <div class="d-flex justify-content-center">
-                    <h4 class="border-bottom-short form-title">Apply now</h4>
+        <section class="bg-light ">
+            <div class="d-flex mb-3 container pt-5">
+                <div class="col-6 contact mt-2">
+                    <h3 class="font-35-700"> Contact Us</h3>
+                    <p class="font-14-400">For more information about the MDC Low Voltage Program, please contact the
+                        School of Continuing
+                        Education and Professional Development at Homestead Campus.
+                    </p>
+                    <p class="font-14-400">
+                        <a class="a-none" href="/">
+                            <i class="fa-solid fa-phone me-1" style="color: #005dab;"></i>
+                            305-237-5159 <br>
+                        </a>
+                        <a class="a-none" href="/">
+                            <i class="fa-solid fa-location-dot me-1" style="color: #005dab;"></i>
+                            500 College Terrace, Room B112. Homestead, FL 33030 <br>
+                        </a>
+                        <a href="/">Get directions</a>
+                    </p>
                 </div>
-                <form>
-                    <div class="form-element ">
-                        <span> <strong>Name *</strong></span>
-                        <input type="text" class="d-block w-100 border-light">
-                        <span class="text-secondary">First name</span>
+                <div class="col-6 contact-form ">
+                    <div class="d-flex justify-content-center">
+                        <h4 class="border-bottom-short form-title">Apply now</h4>
                     </div>
-                    <div class="form-element mt-1">
-                        <input type="text" class="d-block w-100 border-light">
-                        <span class="text-secondary">Last name</span>
-                    </div>
-                    <div class="d-flex w-100 mt-3">
-                        <div class="me-2 d-block w-100">
-                            <span class="d-block"> <strong>Email</strong></span>
-                            <input type="text" class="w-100 border-light">
+                    <form>
+                        <div class="form-element ">
+                            <span> <strong>Name</strong></span> <span><i class="red"> * </i></span>
+                            <input type="text" class="d-block w-100 border-light">
+                            <span class="text-secondary">First name</span>
                         </div>
-                        <div class="d-block w-100 ms-2">
-                            <span class="d-block"><strong>Phone</strong></span>
-                            <input type="text" class="w-100 border-light">
+                        <div class="form-element mt-1">
+                            <input type="text" class="d-block w-100 border-light">
+                            <span class="text-secondary">Last name</span>
                         </div>
-                    </div>
-                    <div class="text-center mt-5">
-                        <button class="submit-button w-100">Submit Form</button>
-                    </div>
-                </form>
+                        <div class="d-flex w-100 mt-3">
+                            <div class="me-2 d-block w-100">
+                                <span class="d-block"> <strong>Email</strong></span>
+                                <input type="text" class="w-100 border-light">
+                            </div>
+                            <div class="d-block w-100 ms-2">
+                                <span class="d-block"><strong>Phone</strong></span>
+                                <input type="text" class="w-100 border-light">
+                            </div>
+                        </div>
+                        <div class="text-center mt-5">
+                            <button class="submit-button w-100">Submit Form</button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </section>
     </main>
